--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
         <li>ASP.NET C# MVC Web Application Development | 2017</li>
     </ul>
     <hr/>
+    <h2>Awards</h2>
+    <ul>
+        <li>The Sheffield Graduate Award | 2015 </li>
+        <li>Enthusiastic Presenter Award | 2014</li>
+    </ul>
+    <hr/>
     <h2>Other</h2>
     <ul>
         <li><a href="./hobbies.html">My Hobbies</a></li>
