--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sifa Tatar</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <!-- Font Awesome icons (free version)-->
       <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
       <!-- Google fonts-->
@@ -25,8 +26,8 @@
             </ul>
         </div>
           <!-- Resume Part-->
-        <div class="main-part">
-           <div id="about">
+        <div class="main-part" id="about">
+           <div>
             <h1 class="title mb-0">Sifa <span>Tatar</span></h1>
             <p id="subtitle"> Istanbul, Turkey · (+90) 545-8500239 · <a href="mailto:sifasensay@gmail.com"><span>sifasensay@gmail.com</span></a></p>
             <br/>
