--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class="title mb-0">Sifa <span>Tatar</span></h1>
             <p id="subtitle"> Istanbul, Turkey · (+90) 545-8500239 · <a href="mailto:sifasensay@gmail.com"><span>sifasensay@gmail.com</span></a></p>
             <br/>
-            <p>Focused and quick-learning software engineer with 8 years of experience in programming and developing software solutions for various projects and clients.</p>
+            <p>Highly skilled and adaptable software engineer with 8 years of hands-on experience in programming and delivering innovative software solutions across diverse projects and clients.</p>
             <br/>
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/sifa-tatar/"><i class="fa-brands fa-linkedin-in"></i></a>
