--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="side-bar gradient-background">
             <img class="profile-img" src="./assets/images/sifatatar_photo.png" alt="sifa's photo"/>
             <ul id="menu">
-                <li tabindex=1><a href="#about">ABOUT</a></li>
-                <li tabindex=1><a href="#experience">EXPERIENCE</a></li>
-                <li tabindex=1><a href="#education">EDUCATION</a></li>
-                <li tabindex=1><a href="#skills">SKILLS</a></li>
-                <li tabindex=1><a href="#awards">AWARDS</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#experience">EXPERIENCE</a></li>
+                <li><a href="#education">EDUCATION</a></li>
+                <li><a href="#skills">SKILLS</a></li>
+                <li><a href="#awards">AWARDS</a></li>
             </ul>
         </div>
           <!-- Resume Part-->
