--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="main-part" id="about">
            <div>
             <h1 class="title mb-0">Sifa <span>Tatar</span></h1>
-            <p id="subtitle"> Istanbul, Turkey · (+90) 545-8500239 · <a href="mailto:sifasensay@gmail.com"><span>sifasensay@gmail.com</span></a></p>
+            <p id="subtitle"> Remote · (+90) 545-8500239 · <a href="mailto:sifasensay@gmail.com"><span>sifasensay@gmail.com</span></a></p>
             <br/>
             <p>Highly skilled and adaptable software engineer with 8 years of hands-on experience in programming and delivering innovative software solutions across diverse projects and clients.</p>
             <br/>
@@ -47,7 +47,7 @@
                 <div class="d-flex justify-content-between mb-5">
                     <div>
                         <h3 class="mb-0">Senior Software Engineer</h3>
-                        <div class="subheading mb-3">Innovance Consultancy  | Istanbul</div>
+                        <div class="subheading mb-3">Innovance Consultancy  | Remote</div>
                         <p>I am an outsourced backend developer, working as part of an Agile Scrum team at Akbank, a privately-owned commercial bank in Turkey. My responsibilities involve developing backend services for the Akbank Mobile Application using C#, Java, SQL Server, and Azure DevOps. I specialize in integrating Akbank payment methods into commercial shopping apps like Trendyol, with the aim of enhancing usage and streamlining the payment process.</p>
                     </div>
                     <div class="flex-shrink-0"><span>01/2023 - Present</span></div>
