--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class="title mb-0">Sifa <span>Tatar</span></h1>
             <p id="subtitle"> Remote · (+90) 545-8500239 · <a href="mailto:sifasensay@gmail.com"><span>sifasensay@gmail.com</span></a></p>
             <br/>
-            <p>Highly skilled and adaptable software engineer with 8 years of hands-on experience in programming and delivering innovative software solutions across diverse projects and clients.</p>
+            <p>Highly skilled and adaptable software engineer with 9 years of hands-on experience in programming and delivering innovative software solutions across diverse projects and clients.</p>
             <br/>
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/sifa-tatar/"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -48,7 +48,7 @@
                     <div>
                         <h3 class="mb-0">Senior Software Engineer</h3>
                         <div class="subheading mb-3">Innovance Consultancy  | Remote</div>
-                        <p>I am an outsourced backend developer, working as part of an Agile Scrum team at Akbank, a privately-owned commercial bank in Turkey. My responsibilities involve developing backend services for the Akbank Mobile Application using C#, Java, SQL Server, and Azure DevOps. I specialize in integrating Akbank payment methods into commercial shopping apps like Trendyol, with the aim of enhancing usage and streamlining the payment process.</p>
+                        <p>I am an outsourced backend developer, working as part of an Agile Scrum team at Akbank, a privately-owned commercial bank in Turkey. I developed backend services for the Akbank Mobile App, enabling merchants to register or acquire a Cash Register POS system by entering their financial ID. This streamlined the application process, enhancing user experience. I designed and implemented secure backend infrastructure to support real-time data exchange between the mobile frontend and Akbank’s internal systems. Additionally, I am currently involved in modernizing legacy systems by migrating MVC-based C# applications to microservices using Java Spring Boot, contributing to the bank's digital transformation efforts.</p>
                     </div>
                     <div class="flex-shrink-0"><span>01/2023 - Present</span></div>
                 </div>
